--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("http://fonts.cdnfonts.com/css/din-next-slab");
+font-family : "DIN Next Slab", sans-serif;
